--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             <div class="box33"></div>
             <div class="box34"></div>
             <div class="box35"></div>
+            <div class="box36"></div>
         </div>
         <div class="blocks">
-           
+            <div class="box37"></div>
+            <div class="box38"></div>
         </div>
     </div>
 </body>
